# SeismoNN

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  2nd_sel.json  2nd_sel.json.dvc  2nd_selection.dvc  COURSE_CHECKLIST.md  DATASET.md  Dockerfile  Makefile  PROJECT.md  README.md  RESULTS.md  mlflow.db  pyproject.toml
.dvc/: config
.github/workflows/: ci.yaml  pre-commit.yaml
configs/: config.yaml
configs/data/: full.yaml  seismonn.yaml
configs/export/: default.yaml
configs/hydra/: config.yaml
configs/inference/: default.yaml
configs/pretrain/: trace_transformer.yaml
configs/serving/: default.yaml
configs/tracking/: mlflow.yaml
configs/train/: cnn.yaml  cnn_multitask.yaml  transformer.yaml  transformer_finetune.yaml
configs/trainer/: default.yaml
configs/validation/: default.yaml
data/: README.md  download.py  metadata.csv  metadata.csv.dvc  metadata.example.csv  metadata_full_summary.json
models/cnn_multitask_50ep/: best.pt.dvc
outputs/: checkpoint.pth
outputs/cnn_baseline/: best.pt  history.csv  last.pt  metrics.json
scripts/: baseline.py  benchmark_inference.py  build_metadata.py  compare_evaluations.py  create_split.py  download_data.py  evaluate_checkpoint.py  evaluate_multitask_checkpoint.py  export_multitask_predictions.py  export_onnx.py  export_tensorrt.py  export_tensorrt.sh  export_torchscript.py  generate_results_report.py  inspect_sample.py  predict.py  predict_multitask.py  pretrain_transformer.py  save_mlflow_model.py  train.py  train_cnn.py  train_lightning.py  train_multitask.py  validate_metadata.py  visualize_sample.py
seismonn/: commands.py  config.py
seismonn/api/: main.py
seismonn/data/: dataset.py  inspection.py  multitask_dataset.py  splits.py  validation.py  visualization.py
seismonn/evaluation/: checkpoint.py  comparison.py  multitask_checkpoint.py  multitask_predictions.py
seismonn/exporting/: onnx.py  tensorrt.py  torchscript.py
seismonn/inference/: benchmark.py  factory.py  multitask_predictor.py  predictor.py
seismonn/lightning/: classifier.py  datamodule.py  train.py
seismonn/models/: cnn.py  cnn_multitask.py  factory.py  masked_transformer.py  transformer.py
seismonn/reporting/: results.py
seismonn/serving/: mlflow_model.py
seismonn/tracking/: mlflow.py
seismonn/training/: evaluate.py  multitask.py  pretraining.py  utils.py  (+2 more)
tests/: test_api.py  test_api_multitask.py  test_benchmark.py  test_checkpoint_evaluation.py  test_cnn.py  test_cnn_multitask.py  test_commands.py  test_data_download.py  test_dataset.py  test_evaluate.py  test_evaluation_comparison.py  test_inference_factory.py  test_inspection.py  test_lightning_training.py  test_masked_pretraining.py  test_metadata_validation.py  test_mlflow_serving_model.py  test_mlflow_tracking.py  test_model_factory.py  test_multitask_checkpoint_evaluation.py  test_multitask_dataset.py  test_multitask_predictions.py  test_multitask_predictor.py  test_multitask_training.py  test_onnx_export.py  test_predictor.py  test_results_report.py  test_splits.py  test_tensorrt_export.py  test_torchscript_export.py  test_train_classifier.py  test_transfer.py  test_transformer.py  test_visualization.py
(+5 files in other folders)
