[project]
name = "seismonn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "hydra-core>=1.3.2",
    "lightning>=2.6.4",
    "matplotlib>=3.10.9",
    "mlflow>=1.27.0",
    "omegaconf>=2.3.0",
    "pandas>=3.0.3",
    "pathlib>=1.0.1",
    "pre-commit>=4.6.0",
    "protobuf>=4.25.3,<5",
    "python-multipart>=0.0.29",
    "pyyaml>=6.0.3",
    "requests>=2.34.2",
    "ruff>=0.15.13",
    "scikit-learn>=1.8.0",
    "torch>=2.12.0",
    "torchmetrics>=1.9.0",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "dvc>=3.67.1",
    "fire>=0.7.1",
    "hatchling>=1.29.0",
    "httpx>=0.28.1",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["seismonn"]
